Thu May 12 16:31:00 2005  NARUSE, Yui  <naruse@ruby-lang.org>

        * ext/nkf/nkf-utf8/nkf.c: follow nkf 2.0.5

Thu May 12 16:15:01 2005  Tanaka Akira  <akr@m17n.org>

	* io.c (rb_io_eof, remain_size, read_all, io_read, appendline)
	  (swallow, rb_io_each_byte, rb_io_getc): don't rely EOF flag.
	  [ruby-talk:141527]

Thu May 12 15:56:20 2005  Tilman Sauerbeck <tilman@code-monkey.de>

	* lib/rdoc/parsers/parse_c.rb: show parsing progress for C files.
	  [ruby-core:4341]

Thu May 12 13:47:56 2005  Hirokazu Yamamoto  <ocean@m2.ccsnet.ne.jp>

	* test/drb/test_drb{ssl,unix}.rb: can test drb
	  before install. (backported from HEAD) [ruby-dev:26146]

Thu May 12 09:53:57 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* version.c (ruby_show_version): flush for non-tty stdout.

Thu May 12 09:07:07 2005  Hirokazu Yamamoto  <ocean@m2.ccsnet.ne.jp>

	* test/ruby/envutil.rb, test/drb/drbtest.rb: can test drb
	  before install. (backported from HEAD) [ruby-Bugs-1672]

Thu May 12 01:23:55 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (rb_eval), parse.y (arg): reduce fixnum range literal at
	  parser.  fixed: [ruby-dev:26113]

	* eval.c (unknown_node): ignore broken NODE to get rid of accessing
	  possibly inaccessible address.  fixed: [ruby-dev:26122]
	  should emit more useful information like [ruby-dev:26126], though.

Wed May 11 16:20:01 2005  GOTOU Yuuzou  <gotoyuzo@notwork.org>

	* lib/webrick/cgi.rb: new methods WEBrick::CGI#[], WEBrick::CGI#logger
	  and WEBrick::CGI#config. (backported from HEAD)

	* lib/webrick/httputils.rb (WEBrick::HTTPUtils.escape_path): should
	  not use String#split("/"). (backported from HEAD)

Wed May 11 10:39:37 2005  Hirokazu Yamamoto  <ocean@m2.ccsnet.ne.jp>

	* lib/tempfile.rb (Tempfile#unlink): fixed typo.

Wed May 11 01:03:36 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (TMP_ALLOC): use macro NEW_NODE() to get rid of warnings on
	  platforms which have no alloca().  fixed: [ruby-talk:141301]
